red-hat-gallery/jaeger-instance/overlays/service-mesh/jaeger-collector-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: jaeger-collector
spec:
  host: jaeger-collector
  trafficPolicy:
    tls:
      mode: DISABLE
