red-hat-gallery/jaeger-instance/overlays/service-mesh/jaeger-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jaeger
spec:
  # Allow traffic coming from the OpenShift ingress router to Jaeger
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: ingress
  podSelector:
    matchLabels:
      app: jaeger
  policyTypes:
  - Ingress
